--- a/CSharp/eShop/eShop/Views/Home/Add.cshtml
+++ b/CSharp/eShop/eShop/Views/Home/Add.cshtml
@@ -1,23 +1,42 @@
-﻿@{
-    ViewData["Title"] = "Add Product";
+﻿@model eShop.Models.Product
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+}
+
+@{
+    ViewData["Title"] = "Add product";
 }
 
 <div>
-    <div class="text-center">
-        <h1 class="display-4">Add Product</h1>
-    </div>
+    <h1 class="display-4">Add Product</h1>
 
-    <div class="row">
-        <div class="col-md-6">
-            <form method="post">
-                <div class="mb-3">
-                    <label for="name" class="form-label">Name</label>
-                    <input type="email" class="form-control" id="name" />
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Add" class="btn btn-primary" />
-                </div>
-            </form>
+    <form asp-action="Add">
+        <div class="row mb-3 mt-4">
+            @Html.LabelFor(product => product.Name, new { @class = "col-sm-2 col-form-label required" })
+            <div class="col-sm-10">
+                @Html.TextBoxFor(product => product.Name, new { @class = "form-control" })
+                @Html.ValidationMessageFor(product => product.Name, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
+
+        <div class="row mb-3">
+            @Html.LabelFor(product => product.Description, new { @class = "col-sm-2 col-form-label" })
+            <div class="col-sm-10">
+                @Html.TextAreaFor(product => product.Description, new { @class = "form-control" })
+            </div>
+        </div>
+
+        <div class="row mb-3">
+            @Html.LabelFor(product => product.Price, new { @class = "col-sm-2 col-form-label" })
+            <div class="col-sm-10">
+                @Html.TextBoxFor(product => product.Price, new { @class = "form-control", @type = "number", min = "0", step = ".01" })
+            </div>
+        </div>
+
+        <div class="form-group text-right">
+            <a class="btn btn-light" asp-area="" asp-controller="Home" asp-action="Index">Cancel</a>
+            <input type="submit" value="Add" class="btn btn-primary" />
+        </div>
+    </form>
 </div>
