--- a/CSharp/eShop/eShop/Views/Home/Add.cshtml
+++ b/CSharp/eShop/eShop/Views/Home/Add.cshtml
@@ -28,9 +28,10 @@
         </div>
 
         <div class="row mb-3">
-            @Html.LabelFor(product => product.Price, new { @class = "col-sm-2 col-form-label" })
+            @Html.LabelFor(product => product.Price, new { @class = "col-sm-2 col-form-label, required" })
             <div class="col-sm-10">
                 @Html.TextBoxFor(product => product.Price, new { @class = "form-control", @type = "number", min = "0", step = ".01" })
+                @Html.ValidationMessageFor(product => product.Price, "", new { @class = "text-danger" })
             </div>
         </div>
 
