--- a/CSharp/eShop/eShop/Views/Home/Order.cshtml
+++ b/CSharp/eShop/eShop/Views/Home/Order.cshtml
@@ -1,5 +1,9 @@
 ﻿@model eShop.Models.Product
 
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
+}
+
 @{
     ViewData["Title"] = "Order confirmation";
 }
@@ -13,37 +17,37 @@
 
     <div class="card">
         <div class="card-body">
-            <label>Name</label>
-            <p>@Model.Name</p>
+            <h5 class="card-title">Product details</h5>
+            <div class="row">
+                <div class="col-6">
+                    <label class="font-weight-bold text-muted mb-1">Name</label>
+                    <p>@Model.Name</p>
+                </div>
+                <div class="col-6">
+                    <label class="font-weight-bold text-muted mb-1">Price</label>
+                    <p>@Model.Price</p>
+                </div>
+            </div>
+
+            <label class="font-weight-bold text-muted mb-1">Description</label>
+            <p class="mb-0">@Model.Description</p>
         </div>
     </div>
 
-    @*<form asp-action="Order">
-            <div class="row mb-3 mt-4">
-                @Html.LabelFor(product => product.Name, new { @class = "col-sm-2 col-form-label required" })
-                <div class="col-sm-10">
-                    @Html.TextBoxFor(product => product.Name, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(product => product.Name, "", new { @class = "text-danger" })
+    <form asp-action="Order">
+        <div class="card mt-4">
+            <div class="card-body">
+                <h5 class="card-title">Delivery address</h5>
+                <div>
+                    @Html.TextAreaFor(product => product.DeliveryAddress, new { @class = "form-control", rows = 4 })
+                    @Html.ValidationMessageFor(product => product.DeliveryAddress, "", new { @class = "text-danger" })
                 </div>
             </div>
+        </div>
 
-            <div class="row mb-3">
-                @Html.LabelFor(product => product.Description, new { @class = "col-sm-2 col-form-label" })
-                <div class="col-sm-10">
-                    @Html.TextAreaFor(product => product.Description, new { @class = "form-control" })
-                </div>
-            </div>
-
-            <div class="row mb-3">
-                @Html.LabelFor(product => product.Price, new { @class = "col-sm-2 col-form-label" })
-                <div class="col-sm-10">
-                    @Html.TextBoxFor(product => product.Price, new { @class = "form-control", @type = "number", min = "0", step = ".01" })
-                </div>
-            </div>
-
-            <div class="form-group text-right">
-                <a class="btn btn-light" asp-area="" asp-controller="Home" asp-action="Index">Cancel</a>
-                <input type="submit" value="Add" class="btn btn-primary" />
-            </div>
-        </form>*@
+        <div class="form-group text-right mt-4">
+            <a class="btn btn-light" asp-area="" asp-controller="Home" asp-action="Index">Cancel</a>
+            <input type="submit" value="Confirm your order" class="btn btn-primary" />
+        </div>
+    </form>
 </div>
