--- a/CSharp/eShop/eShop/Views/Home/Add.cshtml
+++ b/CSharp/eShop/eShop/Views/Home/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model eShop.Models.Product
+﻿@model eShop.Shop.Models.Product
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
