--- a/CSharp/eShop/eShop/Views/Home/Index.cshtml
+++ b/CSharp/eShop/eShop/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<eShop.Models.Product>
+﻿@model IEnumerable<eShop.Shop.Models.Product>
 
 @{
     ViewData["Title"] = "Products";
