--- a/CSharp/eShop/eShop/Views/_ViewImports.cshtml
+++ b/CSharp/eShop/eShop/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using eShop
-@using eShop.Models
+﻿@using eShop.Shop
+@using eShop.Shop.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
