--- a/CSharp/eShop/eShopCarrier/Views/_ViewImports.cshtml
+++ b/CSharp/eShop/eShopCarrier/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using eShopCarrier
-@using eShopCarrier.Models
+﻿@using eShop.Carrier
+@using eShop.Carrier.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
