--- a/CSharp/eShop/eShop.Carrier/Views/Home/Delivered.cshtml
+++ b/CSharp/eShop/eShop.Carrier/Views/Home/Delivered.cshtml
@@ -1,5 +1,36 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model IEnumerable<eShop.Carrier.Models.Product>
+
 @{
+    ViewData["Title"] = "Delivered Products";
 }
+
+<div>
+    <h1 class="display-4">Delivered Products</h1>
+
+    <table class="table mt-4">
+        <thead>
+            <tr>
+                <th style="width: 35%">Name</th>
+                <th style="width: 15%">Status</th>
+                <th style="width: 25%">CargoChain Public Id</th>
+                <th style="width: 25%"></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var product in Model)
+            {
+                <tr>
+                    <td>@product.Name</td>
+                    <td>
+                        <span class="badge @(product.State == eShop.Lib.ProductState.Available ? "bg-primary" : (product.State == eShop.Lib.ProductState.Ordered ? "bg-warning" : "bg-success"))">@product.State</span>
+                    </td>
+                    <td>@product.CargoChainProfilePublicId</td>
+                    <td class="text-right">
+                        <a class="mr-3 font-weight-bold" asp-area="" asp-controller="Home" asp-action="Details" asp-route-id="@product.Id">Details</a>
+                        <a target="_blank" href="@(ViewBag.PublicViewUrl + product.CargoChainProfilePublicId)">View in CargoChain</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
